# stm32f30x-memory-map

./: .rustfmt.toml  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  gen-peripherals.sh
ci/: install.sh  run.sh  script.sh
ci/docker/thumbv7em-none-eabihf/: Dockerfile
src/: btim.rs  dbgmcu.rs  gpio.rs  gptim.rs  i2c.rs  lib.rs  rcc.rs  spi.rs  usart.rs
