[package]
authors = ["Jorge Aparicio <japaricious@gmail.com>"]
description = "Memory map for STM32F30X microcontrollers"
documentation = "https://docs.rs/stm32f30x-memory-map"
keywords = ["arm", "cortex-m", "stm32"]
license = "MIT OR Apache-2.0"
name = "stm32f30x-memory-map"
repository = "https://github.com/japaric/stm32f30x-memory-map"
version = "0.1.0"

[dependencies]
volatile-register = "0.1.2"
